bug fixes on mobile

--- a/style.css
+++ b/style.css
@@ -187,7 +187,6 @@ footer {
     filter: brightness(1.3);
 }
 
-
 @media (max-width: 768px) {
     .tabs {
         flex-direction: column;
@@ -200,8 +199,12 @@ footer {
     }
 
     .tabs li a {
+        display: block;
+        width: 90%; 
+        margin: 5px auto; 
         border-right: none;
         border-bottom: 1px solid #555;
-        width: 100%;
+        padding: 12px 10px;
+        box-sizing: border-box;
     }
 }
